--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "SimuladorDeVialidadPuebla.sln"
+    "dotnet.defaultSolution": "REALIDVIRT_EV2_AVANCEUI.sln"
 }
